remove unused ressources and update website files structure

--- a/website/copyboard.module.css
+++ b/website/copyboard.module.css
@@ -1,6 +1,6 @@
 .pre {
-    margin: 0px;
-    border: 0px;
+    margin: 0;
+    border: 0;
     background: none;
     box-sizing: inherit;
     display: inherit;
